syntax = "proto3";
package cosmos.base.grpc.v2;

import "google/protobuf/any.proto";

option go_package = "cosmossdk.io/server/v2/api/grpc";

service Service {
  rpc Query(QueryRequest) returns (QueryResponse) {}

  rpc ListQueryHandlers(ListQueryHandlersRequest) returns (ListQueryHandlersResponse) {}
}

message QueryRequest {
  google.protobuf.Any request = 1;
}

message QueryResponse {
  google.protobuf.Any response = 1;
}

message ListQueryHandlersRequest {}

message ListQueryHandlersResponse {
  repeated Handler handlers = 1;
}

message Handler {
  string request_name  = 1;
  string response_name = 2;
}